--- a/vue/src/assets/content.css
+++ b/vue/src/assets/content.css
@@ -7,28 +7,37 @@ a {
 div{
     text-align: center;
 }
-h1, h2 {
+h1, h2, h3 {
     text-align: left;
+    font-family: work-sans;
 }
 h1{
     width: 100%;
-    padding: 12% 0 0 8%;
     color: white;
     font-weight: 700;
     font-size: 60px;
-    font-family: work-sans;
     line-height: 100%;
     text-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
+    padding-left: 8%;
+}
+#home h1{
+    padding-top: 12%;
 }
 h2{
     position: relative;
     font-size: 28px;
     font-weight: 700;
-    font-family: work-sans;
     line-height: 30px;
-    font-weight: bold;
     color: #182b49;
     margin: 9.5% 0 3% 0;
+}
+#heading h3{
+    position: relative;
+    font-size: 26px;
+    font-weight: 600;
+    line-height: 30px;
+    color: white;
+    /*margin: 9.5% 0 3% 0;*/
 }
 p {
     font-size: 15px;
@@ -45,12 +54,23 @@ p {
     margin: 2.2% 0 0 0;
     background: rgba(24, 43, 73, 0.65);
 }
+.back {
+    padding: 8% 0 1% 8%;
+    margin: 2.2% 0 0 0;
+}
 #heading {
     height: auto;
 }
 #body {
     padding: 0 8%;
 }
+.el-tabs__content {
+    padding: 32px;
+    color: #6b778c;
+    font-size: 32px;
+    font-weight: 600;
+}
+
 ul{
     text-align: left;
     margin-left: 2rem;
