--- a/vue/src/assets/main.css
+++ b/vue/src/assets/main.css
@@ -5,6 +5,25 @@
   padding: 0;
   box-sizing: border-box;
 }
+.el-tabs {
+  padding-top: 9.5vh;
+}
+.el-tabs__item {
+  font-family: work-sans-semi, serif;
+  font-size: 26px;
+}
+.el-tabs__item.is-active {
+  color: black;
+  font-family: work-sans, serif;
+}
+.el-tabs__active-bar {
+  background-color: #ffc740 !important;
+  /*background-image: linear-gradient(90deg, transparent 0, transparent 15%, #ffc740 0, #ffc740 85%, transparent 0, transparent);*/
+  height: 3px;
+}
+.el-tabs__content {
+  padding: 4% 2%;
+}
 .el-footer {
   --el-footer-padding: 0 0px;
 }
