--- a/vue/src/assets/content.css
+++ b/vue/src/assets/content.css
@@ -171,11 +171,10 @@ li li {
     display: inline;
     text-decoration: none;
     color: #1e4460;
-    font-weight: 500;
+    font-weight: 700;
 }
 .link:hover {
-    text-decoration: underline;
-    font-weight: 600;
+    border-bottom: 2px solid #ffc740;
 }
 .moreRes{
     background-image: linear-gradient(
