--- a/vue/src/assets/main.css
+++ b/vue/src/assets/main.css
@@ -51,6 +51,9 @@
 .prev {
   width: 50px;
 }
+.home-footer span{
+  background: none !important;
+}
 /*.el-sub-menu__title {*/
 /*  height: 35px;*/
 /*  line-height: 35px;*/
