--- a/vue/src/assets/content.css
+++ b/vue/src/assets/content.css
@@ -41,13 +41,14 @@ h2{
 }
 p {
     font-size: 15px;
+    line-height: 141%;
 }
 .title {
     position: absolute;
     width: 100%;
     height: 100%;
 }
-.subtitle {
+.quote {
     font-size: 22px;
     color: #F9F9F9;
     padding: 2% 0 2% 8%;
@@ -147,7 +148,6 @@ li li {
     font-size: 16px;
     font-weight: 400;
     font-style: normal;
-    line-height: 141%;
 }
 #more-resources a{
     text-decoration: none;
@@ -216,4 +216,12 @@ li li {
     font-style: normal;
     text-align: left;
     margin-bottom: 0;
+}
+.moreResLink {
+    color: #B27224;
+    font-weight: 500;
+}
+.moreResLink:hover {
+    font-weight: 600;
+    text-decoration: underline;
 }
